fix a bug where Quill popup tools sometimes aren't visible

--- a/src/base/static/scss/_forms.scss
+++ b/src/base/static/scss/_forms.scss
@@ -278,6 +278,10 @@ select {
     border-right: 0.30em solid #a3c7d9 !important;   
 }
 
+.ql-out-bottom {
+    visibility: visible !important;
+}
+
 /* Editor mode update form */
 #update-place-model-title-form .place-value-title {
     border-width: 4px;
